fix: flake8 changes

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,12 @@
 [flake8]
+; ignore = E266, E501, W503, E203, C901
+; select = C,E,F,W,B,B950
 max-line-length = 100
-max-complexity = 10
+max-complexity = 18
+line-length = 100
+exclude = .eggs,*.egg-info,.git,.hg,.tox, __pycache__,.vscode,.venv,__init__.py,.mypy_cache,.pytest_cache
+
+[tool.black]
 line-length = 100
 include = '\.pyi?$'
 exclude = '''
@@ -15,3 +21,7 @@ exclude = '''
   | dist
 )/
 '''
+
+[tool.isort]
+profile = "black"
+line_length = 100
