--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,29 @@
 version: "3"
 
 services:
-  app:
+  server:
     build: .
     ports:
-      - "8080:8080"
+      - "8000:8000"
     env_file:
       - .env
+    command: >
+      /bin/sh -c "
+      uvicorn app.main:app --reload --host 0.0.0.0 --port 8000;
+      "
+    networks:
+      - chef
+  ui:
+    build: .
+    ports:
+      - "8504:8501"
+    env_file:
+      - .env
+    command: >
+      /bin/sh -c "
+      streamlit run app/ui/main.py --server.port 8501;
+      "
+    networks:
+    - chef
+networks:
+  chef:
