--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,14 +14,12 @@ loguru = "^0.4.0"
 joblib = "^0.15.1"
 gensim = "^4.2.0"
 textblob = "^0.17.1"
-SQLAlchemy = "^1.4.39"
 pandas = "^1.4.3"
-Jinja2 = "^3.1.2"
 streamlit = "^1.11.1"
-streamlit-elements = "^0.1.0"
-streamlit-card = "^0.0.3"
 python-multipart = "^0.0.5"
 seaborn = "^0.11.2"
+boto3 = "^1.24.51"
+googletrans = "3.1.0a0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
